welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: Missing closing brace `}' assumed here
def haveBaggle():Boolean = {for (nbPas <- 1 to 6) {
^